Correccion de errores comantarios y css

--- a/index.html
+++ b/index.html
@@ -11,27 +11,33 @@
 <body>
     <header class="header">
         <h1> Juan José Vilaverde García </h1>
+        <section>
+            <article>
+                <img src="https://www.dropbox.com/scl/fi/9mhb1p0iisyamqve6yvo2/Captura-de-pantalla-2025-03-12-162745.png?rlkey=g1211dg4cr4wbb3ek659nravs&st=xusdaki0&dl=1"
+                    alt="Foto de perfil">
+            </article>
+        </section>
         <nav>
             <ul>
-                <li><a class="Inicio" href="#" data-title="Inicio"><span>
+                <li><a class="menu Inicio" href="#" data-title="Inicio"><span>
                             <span>Inicio</span>
                         </span></a></li>
-                <li><a class="Sobre_mí" href="#" data-title="Sobre mí">
+                <li><a class="menu Sobre_mí" href="#" data-title="Sobre mí">
                         <span><span>Sobre mí</span>
                         </span></a></li>
-                <li><a class="estudios" href="#" data-title="Estudios">
+                <li><a class="menu estudios" href="#" data-title="Estudios">
                         <span><span>Estudios</span>
                         </span></a></li>
-                <li><a class="ExperienciaLaboral" href="#" data-title="Experiencia">
+                <li><a class="menu ExperienciaLaboral" href="#" data-title="Experiencia">
                         <span><span>Experiencia</span>
                         </span></a></li>
-                <li><a class="Habilidades" href="#" data-title="Habilidades">
+                <li><a class="menu Habilidades" href="#" data-title="Habilidades">
                         <span><span>Habilidades</span>
                         </span></a></li>
-                <li><a class="Hobbies" href="#" data-title="Hobbies">
+                <li><a class="menu Hobbies" href="#" data-title="Hobbies">
                         <span><span>Hobbies</span>
                         </span></a></li>
-                <li><a class="Contacto" href="contacto.html" data-title="Contacto">
+                <li><a class="menu Contacto" href="contacto.html" data-title="Contacto">
                         <span><span>Contacto</span>
                         </span></a></li>
             </ul>
@@ -39,27 +45,12 @@
 
     </header>
 
-    <section>
-        <article>
-            <img src="https://www.dropbox.com/scl/fi/9mhb1p0iisyamqve6yvo2/Captura-de-pantalla-2025-03-12-162745.png?rlkey=g1211dg4cr4wbb3ek659nravs&st=xusdaki0&dl=1"
-                alt="Foto de perfil">
-        </article>
-    </section>
+
 
     <main class="main-container">
         <div class="content">
 
-            <section>
-                <h2>Lugar de nacimiento</h2>
-                <p>
-                    Garrucha, pueblo famoso almeriense por su belleza e historia.
-                </p>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12643.88765721224!2d-1.8516632!3d37.1876808!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd7b29ef83cd634f%3A0xb3c2ba9c1e826ad!2sGarrucha%2C%20Almer%C3%ADa!5e0!3m2!1ses!2ses!4v1710243679000"
-                    width="900" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
-            </section>
+
 
             <section>
                 <h2>¿Quién soy?</h2>
@@ -93,6 +84,12 @@
                 <p>Hosteleria</p>
             </section>
             <section>
+                <h2>CV</h2>
+                <iframe src="https://drive.google.com/file/d/1r8_dqxcz__u8fyUEKw6dCPgiLSpWgeij/preview" width="800"
+                    height="600">
+                </iframe>
+            </section>
+            <section>
                 <h2>Talentos</h2>
                 <p>Creatividad y persistencia ante adversidades</p>
                 <p>Sincronización y buen hambiente de trabajo en quipo</p>
@@ -106,14 +103,20 @@
                 </div>
             </section>
 
+
             <section>
-                <h2>CV</h2>
-                <iframe src="https://drive.google.com/file/d/1r8_dqxcz__u8fyUEKw6dCPgiLSpWgeij/preview"
-                    width="800" height="600">
+                <h2>Lugar de nacimiento</h2>
+                <p>
+                    Garrucha, pueblo famoso almeriense por su belleza e historia.
+                </p>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12643.88765721224!2d-1.8516632!3d37.1876808!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd7b29ef83cd634f%3A0xb3c2ba9c1e826ad!2sGarrucha%2C%20Almer%C3%ADa!5e0!3m2!1ses!2ses!4v1710243679000"
+                    width="900" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
             </section>
-
         </div>
+
     </main>
 
 
